<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile_background"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/profile_background_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/profile_image_drawable"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/user_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_details"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="9dp"
            android:background="@android:color/white"
            card_view:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_point_earned"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:text="@string/points_earned"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_wallet_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_wallet_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/wallet_balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_point_earned"
                    app:layout_constraintTop_toTopOf="@+id/tv_point_earned" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_point_earned,tv_wallet_balance" />

                <TextView
                    android:id="@+id/tv_point_earned_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:text="@string/points_earned_value"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_wallet_balance_value"
                    app:layout_constraintStart_toStartOf="@+id/tv_point_earned"
                    app:layout_constraintTop_toBottomOf="@+id/barrier" />

                <TextView
                    android:id="@+id/tv_wallet_balance_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/wallet_balance_value"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_point_earned_value"
                    app:layout_constraintTop_toTopOf="@+id/tv_point_earned_value" />
                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_point_earned_value,tv_wallet_balance_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_user_flname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/user_first_last_name"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/cv_details"
            app:layout_constraintTop_toBottomOf="@+id/cv_details" />

        <TextView
            android:id="@+id/tv_user_flname_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cv_details" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_user_flname,tv_user_flname_value" />


        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/tv_user_flname"
            app:layout_constraintTop_toBottomOf="@+id/barrier_user_name" />

        <TextView
            android:id="@+id/tv_user_dob_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/dob_value"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_dob" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_user_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_dob,tv_user_dob_value" />


        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/tv_user_flname"
            app:layout_constraintTop_toBottomOf="@+id/barrier_user_dob" />

        <TextView
            android:id="@+id/tv_user_address_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_address" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_address,tv_user_address_value" />
        <ProgressBar
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>