<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginVm"
            type="com.assignment.victoriassecret.viewModel.LoginViewModel" />

        <variable
            name="handler"
            type="com.assignment.victoriassecret.utills.InterfaceListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".view.activity.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_login_background"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_screen_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:cardCornerRadius="12dp"
            android:background="@android:color/white"
            card_view:cardBackgroundColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
<!-- style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                   style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_background"
                    android:text="@string/login_"
                    android:onClick="@{()->handler.btnOnClick()}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
                    app:layout_constraintWidth_percent="0.7" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="end"
                    android:layout_marginEnd="12dp"
                    android:onClick="@{()->handler.forgotOnclick()}"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/holo_blue_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>